<resources>
    <string name="app_name">Yabi</string>
    <string name="yabi">Yabi!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="log_in_instead">Log In Instead</string>
    <string name="browse_as_guest">Browse as Guest</string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_instead">Create Account Instead</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="chats">Seller Messaging</string>
    <string name="your_posts">Your Posts</string>
    <string name="completed_offers">Completed Offers</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="search">Search</string>
    <string name="for_you">For You</string>
    <string name="local">Local</string>
    <string name="new_listings">New</string>
    <string name="exampleDescription">Here is some text! Here is some text! Here is some text! Here is some text! Here is some text! Here is some text! Here is some text! Here is some text! Here is some text!</string>
    <string name="ExampleTitle">Very Long Ad Title Name Very Long Ad Title Name Very Long Ad Title Name</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="requesting_price">Requesting Price:</string>
    <string name="message">Description:</string>
    <string name="cover_shipping_until">Cover shipping until:</string>
    <string name="do_not_cover_shipping">Do not cover shipping</string>
    <string name="cover_shipping_in_full">Cover shipping in full</string>
    <string name="location">Location:</string>
    <string name="custom_location">Custom Location:</string>
    <string name="preset_location">Preset Location:</string>
    <string name="shipping">Shipping:</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="_00_00">00.00</string>
    <string name="enter_description_for_item">Enter description for item</string>
    <string name="dollar_sign">$</string>
    <string name="get_photos">Get Photos</string>
    <string name="your_photo">Your photo</string>
    <string name="create_post">Create Post</string>
    <string name="your_post_image">Your Post Image</string>
    <string name="offers_button">0 Offers</string>
    <string name="edit_posting">Edit Posting</string>
    <string name="delete_post">Delete Post</string>
    <string name="account_name">Account Name</string>
    <string name="rating">0%</string>
    <string name="user_post_image">User Post Image</string>
    <string name="covers_shipping_until">Covers Shipping Until:</string>
    <string name="covers_shipping_in_full">Covers Shipping in Full</string>
    <string name="seller_covers_shipping">Seller Covers Shipping</string>
    <string name="buyer_covers_shipping">Buyer Covers Shipping</string>
    <string name="D_00_00">$00.00</string>
    <string name="sometown_aa">Sometown, AA</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="shipping_buyer_in_full">Shipping: Buyer, In Full</string>
    <string name="save_changes">Save changes</string>
    <string name="settings">Settings</string>
    <string name="clear_input">Clear Input</string>
    <string name="filter">Filter</string>
    <string name="ex_boston">ex: Boston</string>
    <string name="city_">City:</string>
    <string name="state_">State:</string>
    <string name="price_min">Price Min: $</string>
    <string name="price_max">Price Max: $</string>
    <string name="filter_by_location">Filter Location</string>
    <string name="filter_shipping">Filter Shipping</string>
    <string name="confirm">Confirm</string>
    <string name="buyer_only_mode">Buyer Only Mode</string>
    <string name="zip_code_">Zip Code:</string>
    <string name="_12345">12345</string>
    <string name="street_">Street:</string>
    <string name="_23_example_street">23 Example Street</string>
    <string name="location_">Your Location:</string>
    <string name="tags_">Your Tags:</string>
    <string name="furniture">Furniture</string>
    <string name="games">Games</string>
    <string name="cards">Cards</string>
    <string name="paintings">Paintings</string>
    <string name="clothing">Clothing</string>
    <string name="home_improvement">Home Improvement</string>
    <string name="accessory">Accessory</string>
    <string name="collectable">Collectable</string>
    <string name="select_tag">Select Tag:</string>
    <string name="log_out">Log Out</string>
    <string name="your_offer">Submit Your Offer</string>

    <string-array name="tag_list">
        <item>Furniture</item>
        <item>Games</item>
        <item>Cards</item>
        <item>Paintings</item>
        <item>Clothing</item>
        <item>Home Improvement</item>
        <item>Accessory</item>
        <item>Collectable</item>
    </string-array>
    <string name="message_here">message here</string>
    <string name="post_info">Post Info</string>
    <string name="original_post">Original Post</string>
    <string name="current_offer">Current Offer</string>
    <string name="original_offer">Original Offer</string>
    <string name="lorem_ipsum">Eum quod qui enim. Temporibus magnam eveniet commodi inventore odio rerum. Optio veniam vel nihil quisquam error. Velit quam facilis quibusdam explicabo iusto quia. Consectetur molestiae nam quis exercitationem magni. Adipisci pariatur iusto laudantium sit numquam. Vel sequi sapiente ut animi. Modi officiis et praesentium quia nam cum. Tenetur molestiae quis aut tenetur placeat quia. Impedit id qui consequatur voluptatum. Repellat est dolor quam rem ipsum. Molestiae est sapiente et illo sunt reprehenderit sit. Enim officiis rerum eveniet nobis aspernatur impedit saepe fuga. Quae dolores delectus veniam sit eligendi modi. Unde aut aliquam voluptate. Eaque aliquam eligendi ipsum non error dolorem quasi sunt. Vel quas nihil et autem. Illum nam harum est laudantium quia. Optio deserunt error deleniti est sit non. Maxime dolores ut non sed.</string>
    <string name="user_s_offer">User\'s Offer</string>
    <string name="from_sometown_aa">From: SomeTown, AA</string>
    <string name="to_sometown_aa">To: SomeTown, AA</string>
    <string name="accept_offer">Accept Offer</string>
</resources>
